--- a/index.html
+++ b/index.html
@@ -102,12 +102,12 @@
             <h2 >Nuestras skills</h2>
             <p class="subtitle">Trabajamos con las mejores texnologias disponibles</p>
           </div>
-          <div id="carouselExampleCaptions" class="carousel slide">
+          <div id="carrouselSkills" class="carousel slide">
             <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+              <button type="button" data-bs-target="#carrouselSkills" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carrouselSkills" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carrouselSkills" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              <button type="button" data-bs-target="#carrouselSkills" data-bs-slide-to="3" aria-label="Slide 4"></button>
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
@@ -118,20 +118,42 @@
               </div>
               <div class="carousel-item">
                 <img src="/img/3.svg" class="img_carousel d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
               </div>
               <div class="carousel-item">
                 <img src="/img/4.svg" class="img_carousel d-block w-100" alt="...">
               </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+            <button class="carousel-control-prev" type="button" data-bs-target="#carrouselSkills" data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+            <button class="carousel-control-next" type="button" data-bs-target="#carrouselSkills" data-bs-slide="next">
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Next</span>
             </button>
+          </div>
+        </div>
+      </section>
+      <section>
+        <h3 class="title">Con nosotros, son solo tres simples pasos</h3>
+        <div class="pasosContainer">
+          <div class="pasos">
+            <div class="paso">
+              <h5 class="pasoN">1</h5>
+            </div>
+            <p class="pasosCopy">Fijamos una entrevista en la que escucharemos tus ideas y te asesoraremos</p>
+          </div>
+          <div class="pasos">
+            <div class="paso">
+              <h5 class="pasoN">2</h5>
+            </div>
+            <p class="pasosCopy">Acordarmos un presupuesto e iniciamos tu proyecto</p>
+          </div>
+          <div class="pasos">
+            <div class="paso">
+              <h5 class="pasoN">3</h5>
+            </div>
+            <p class="pasosCopy">Lanzamos tu pyme al mundo utilizando la mejor tecnologia</p>
           </div>
         </div>
       </section>
