--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="/css/main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Veertien | Desarrollo web y ciencia de datos</title>
+    <link rel="icon" href="/img/svg/faviconRecurso 42.svg" type="image/svg+xml">
 
 </head>
 <body>
@@ -97,7 +98,7 @@
       <section>
         <h2 class="title">Sabemos lo dificil que puede ser confiar</h2>
         <p class="copy">En Veertien, nos enfocamos en satisfacer las necesidades de nuestros clientes a través de una comunicación y colaboración estrecha durante todo el proceso de desarrollo. Escuchamos y respondemos a las necesidades y preocupaciones de nuestros clientes de manera oportuna y efectiva para cumplir con todas las expectativas en cada proyecto.</p>
-        <div class="skills" data-aos="fade-up" data-aos-duration="2000">
+        <div class="skills">
           <div class="titleB">
             <h2 >Nuestras skills</h2>
             <p class="subtitle">Trabajamos con las mejores texnologias disponibles</p>
@@ -155,28 +156,39 @@
             </div>
             <p class="pasosCopy">Lanzamos tu pyme al mundo utilizando la mejor tecnologia</p>
           </div>
-        </div>
-      </section>
-      <section class="filosofia" data-aos="zoom-in" data-aos-duration="2000">
-        <div class="titleB">
-          <h1>Confianza y fé</h1>
-          <p class="subtitle">Tenémos claro cuales son nuestro objetivos, nos aseguramos de brindarte las herramientas neceasarias para que tu empresa progrese. Confia en nostro</p>
-        </div>
-        <div class='content'>
-          <div class='visible'>
-            <p class="p_nav">
-              Faith in
-            </p>
-            <ul class="ul_nav">
-              <li class="li_nav">your business</li>
-              <li class="li_nav">your dreams</li>
-              <li class="li_nav"><img src="/img/Ch3Recurso 19.svg" class="filo_img" alt="" id="img_filosofia"></li>
-            </ul>
+          <div class="form" data-aos="zoom-in" data-aos-duration="2000">
+            <span class="form__title">Sign up</span>
+            <form action="">
+                <div class="form__input">
+                    <i class="ri-user-line"></i>
+                    <input type="text" placeholder="Name">
+                    <span class="bar"></span>
+                </div>
+                <div class="form__input">
+                    <i class="ri-mail-line"></i>
+                    <input type="text" placeholder="Email">
+                    <span class="bar"></span>
+                </div>
+                <div class="form__input">
+                    <i class="ri-lock-line"></i>
+                    <input type="text" placeholder="Password">
+                    <span class="bar"></span>
+                </div>
+                <div class="form__input">
+                    <i class="ri-lock-line"></i>
+                    <input type="text" placeholder="Confirm password">
+                    <span class="bar"></span>
+                </div>
+                <button type="submit" class="form__button">Sign up</button>
+                <span class="form__switch">
+                    Already have an account? <a href="#">Login</a>
+                </span>
+            </form>
           </div>
+
         </div>
       </section>
     </main>
-    
     <footer>
       
     </footer>
