--- a/index.html
+++ b/index.html
@@ -138,30 +138,30 @@
       <section>
         <h3 class="title">Con nosotros, son solo tres simples pasos</h3>
         <div class="pasosContainer">
-          <div class="pasos">
+          <div class="pasos" data-aos="fade-up" data-aos-duration="2000">
             <div class="paso">
               <h5 class="pasoN">1</h5>
             </div>
             <p class="pasosCopy">Fijamos una entrevista en la que escucharemos tus ideas y te asesoraremos</p>
           </div>
-          <div class="pasos">
+          <div class="pasos" data-aos="fade-up" data-aos-duration="2000">
             <div class="paso">
               <h5 class="pasoN">2</h5>
             </div>
             <p class="pasosCopy">Acordarmos un presupuesto e iniciamos tu proyecto</p>
           </div>
-          <div class="pasos">
+          <div class="pasos" data-aos="fade-up" data-aos-duration="2000">
             <div class="paso">
               <h5 class="pasoN">3</h5>
             </div>
             <p class="pasosCopy">Lanzamos tu pyme al mundo utilizando la mejor tecnologia</p>
           </div>
           <div class="form" data-aos="zoom-in" data-aos-duration="2000">
-            <span class="form__title">Sign up</span>
+            <span class="form__title">Contacto</span>
             <form action="">
                 <div class="form__input">
                     <i class="ri-user-line"></i>
-                    <input type="text" placeholder="Name">
+                    <input type="text" placeholder="Nombre">
                     <span class="bar"></span>
                 </div>
                 <div class="form__input">
@@ -171,17 +171,12 @@
                 </div>
                 <div class="form__input">
                     <i class="ri-lock-line"></i>
-                    <input type="text" placeholder="Password">
-                    <span class="bar"></span>
-                </div>
-                <div class="form__input">
-                    <i class="ri-lock-line"></i>
-                    <input type="text" placeholder="Confirm password">
+                    <input type="text" placeholder="Telefono">
                     <span class="bar"></span>
                 </div>
                 <button type="submit" class="form__button">Sign up</button>
                 <span class="form__switch">
-                    Already have an account? <a href="#">Login</a>
+                    Hubo un problema? <a href="#">Ayuda</a>
                 </span>
             </form>
           </div>
