--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/remixicon/remixicon.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <title>Veertien | Desarrollo web y ciencia de datos</title>
     <link rel="icon" href="/img/svg/faviconRecurso 42.svg" type="image/svg+xml">
 
 </head>
-<body>
+<body style="display: flex; flex-direction: column; justify-content: space-between; height: 100vh;">
     <header class="caja" >
             <nav class="container nav_container" id="navPrincipal">
                 <div class="icono-menu">
@@ -174,7 +175,7 @@
                     <input type="text" placeholder="Telefono">
                     <span class="bar"></span>
                 </div>
-                <button type="submit" class="form__button">Sign up</button>
+                <button type="submit" class="form__button">Enviar</button>
                 <span class="form__switch">
                     Hubo un problema? <a href="#">Ayuda</a>
                 </span>
@@ -184,9 +185,69 @@
         </div>
       </section>
     </main>
-    <footer>
-      
-    </footer>
+    <footer class="footer">
+      <div class="footer__container">
+          <div class="footer__top">
+              <div class="company__info">
+                  <a href="#" class="company__logo"><img src="/logoRecurso 27.svg" alt="" class="imgFooter"></a>
+                  <p class="company__description">
+                    Combinamos la pasión por el arte y la tecnología de punta para crear soluciones de software minimalistas e innovadoras.
+                  </p>
+                  <ul class="footer__list">
+                      <li class="footer__list-item">
+                          <a href="#" class="footer__list-link">
+                              <i class="ri-facebook-circle-line"></i>
+                          </a>
+                      </li>
+                      <li class="footer__list-item">
+                          <a href="#" class="footer__list-link">
+                              <i class="ri-instagram-line"></i>
+                          </a>
+                      </li>
+                      <li class="footer__list-item">
+                          <a href="#" class="footer__list-link">
+                              <i class="ri-twitter-line"></i>
+                          </a>
+                      </li>
+                  </ul>
+                  <span class="copyright">&copy;2023 Veertien. Todos los derechos reservados.</span>
+              </div>
+
+              <div>
+                  <h6 class="footer__title">Servicios</h6>
+                  <ul class="footer__list">
+                      <li class="footer__list-item">
+                          <a href="" class="footer__list-link">Cotizar ahora</a>
+                      </li>
+                      <li class="footer__list-item">
+                          <a href="" class="footer__list-link">Contactar un especialista</a>
+                      </li>
+                      <li class="footer__list-item">
+                          <a href="" class="footer__list-link">Consultoria</a>
+                      </li>
+                      <li class="footer__list-item">
+                          <a href="" class="footer__list-link">Trabaja en Veertien</a>
+                      </li>
+                  </ul>
+              </div>
+
+              <div>
+                  <h6 class="footer__title">Nosotros</h6>
+                  <ul class="footer__list">
+                      <li class="footer__list-item">
+                          <a href="" class="footer__list-link">Historia</a>
+                      </li>
+                      <li class="footer__list-item">
+                          <a href="" class="footer__list-link">Sede</a>
+                      </li>
+                      <li class="footer__list-item">
+                          <a href="" class="footer__list-link">Redes sociales</a>
+                      </li>
+                  </ul>
+              </div>
+          </div>
+      </div>
+  </footer>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
