Avances preloader y contacto

--- a/componentes.html
+++ b/componentes.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -20,5 +20,13 @@
           </ul>
         </div>
       </div>
+
+
+      card
+      <div  class="filosofia" >
+        <div class="titleB">
+          <h3>No te quedes atras en la era digital</h3>
+        </div>
+      </div>
 </body>
-</html>
+</html> -->
