--- a/ayuda.html
+++ b/ayuda.html
@@ -1,36 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/main.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    <title>Document</title>
-</head>
-<body>
-    <header class="caja" >
-        <nav class="container nav_container" id="navPrincipal">
-            <div class="icono-menu">
-                <img src="/img/3869892-200.png" id="icono-menu">
-            </div>
-            <div class="logo">
-                <a href="/index.html"><img src="/img/Ch3Recurso 19.svg" alt=""></a>
-            </div>
-            <div class="cont-menu active_nav" id="menu">
-                <ul class="ul_hamburguer">
-                    <li class="li_hamburguer"> Home </li>
-                    <li class="li_hamburguer"> About </li>
-                    <li class="li_hamburguer"> Info </li>
-                    <li class="li_hamburguer"> Contact </li>
-                    <li class="li_hamburguer"> Show me more </li>
-                </ul>
-            </div>
-            <script src="main.js"></script>
-        </nav>
-    </header>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+        <link rel="stylesheet" href="/css/main.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/remixicon/remixicon.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+        <title>Veertien | Desarrollo web y ciencia de datos</title>
+        <link rel="icon" href="/img/svg/faviconRecurso 42.svg" type="image/svg+xml">
+        <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+    </head>
+    <body style="display: flex; flex-direction: column; justify-content: space-between; height: 100vh;">
+        <header class="caja" >
+                <nav class="container nav_container" id="navPrincipal">
+                    <div class="icono-menu">
+                        <img src="/img/3869892-200.png" id="icono-menu">
+                    </div>
+                    <div class="logo">
+                        <a href="/index.html"><img src="/logoRecurso 27.svg" alt=""></a>
+                    </div>
+                    <div class="cont-menu active_nav" id="menu">
+                        <ul class="ul_hamburguer">
+                            <a href="/index.html"><li class="li_hamburguer"> Home </li></a>
+                            <li class="li_hamburguer"> About </li>
+                            <a href="/ayuda.html"><li class="li_hamburguer"> Ayuda </li></a>
+                            <li class="li_hamburguer"> Contact </li>
+                            <li class="li_hamburguer"> Show me more </li>
+                        </ul>
+                    </div>
+                    <script src="main.js"></script>
+                </nav>
+        </header>
     <main>
         <section class="cards">
             <div class="card_">
@@ -59,5 +62,49 @@
               </div>
         </section>
     </main>
+    <footer class="footer">
+        <div class="footer__container">
+            <div class="footer__top">
+                <div class="company__info">
+                    <a href="#" class="company__logo"><img src="/logoRecurso 27.svg" alt="" class="imgFooter"></a>
+                    <p class="company__description">
+                      Combinamos la pasión por el arte y la tecnología de punta para crear soluciones de software minimalistas e innovadoras.
+                    </p>
+                    <ul class="footer__list">
+                        <li class="footer__list-item">
+                            <a href="https://www.linkedin.com/in/farid-alfaro-b463381b9/" class="footer__list-link" target="_blank">
+                                <i class="ri-linkedin-fill"></i>
+                            </a>
+                        </li>
+                        <li class="footer__list-item">
+                            <a href="https://github.com/FaridAlfaro" class="footer__list-link" target="_blank">
+                              <i class="ri-github-line"></i>
+                            </a>
+                        </li>
+                        <li class="footer__list-item">
+                            <a href="https://www.instagram.com/farid_alfaro_/" class="footer__list-link" target="_blank">
+                              <i class="ri-instagram-line"></i>
+                            </a>
+                        </li>
+                    </ul>
+                    <span class="copyright">&copy;2023 Veertien. Todos los derechos reservados.</span>
+                </div>
+                <div>
+                    <h6 class="footer__title">Nosotros</h6>
+                    <ul class="footer__list">
+                        <li class="footer__list-item">
+                            <a href="" class="footer__list-link">Historia</a>
+                        </li>
+                        <li class="footer__list-item">
+                            <a href="" class="footer__list-link">Sede</a>
+                        </li>
+                        <li class="footer__list-item">
+                            <a href="" class="footer__list-link">Redes sociales</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
