--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <title>Veertien | Desarrollo web y ciencia de datos</title>
     <link rel="icon" href="/img/svg/faviconRecurso 42.svg" type="image/svg+xml">
-
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 </head>
 <body style="display: flex; flex-direction: column; justify-content: space-between; height: 100vh;">
+    <div id="preloader">
+      <div id="loader"></div>
+    </div>
     <header class="caja" >
             <nav class="container nav_container" id="navPrincipal">
                 <div class="icono-menu">
@@ -24,7 +27,7 @@
                 </div>
                 <div class="cont-menu active_nav" id="menu">
                     <ul class="ul_hamburguer">
-                        <li class="li_hamburguer"> Home </li>
+                        <a href="/index.html"><li class="li_hamburguer"> Home </li></a>
                         <li class="li_hamburguer"> About </li>
                         <a href="/ayuda.html"><li class="li_hamburguer"> Ayuda </li></a>
                         <li class="li_hamburguer"> Contact </li>
@@ -171,11 +174,11 @@
                     <span class="bar"></span>
                 </div>
                 <div class="form__input">
-                    <i class="ri-lock-line"></i>
+                    <i class="ri-phone-line"></i>
                     <input type="text" placeholder="Telefono">
                     <span class="bar"></span>
                 </div>
-                <button type="submit" class="form__button">Enviar</button>
+                <a href="/reservas.html" type="submit" class="form__button">Enviar</a>
                 <span class="form__switch">
                     Hubo un problema? <a href="#">Ayuda</a>
                 </span>
@@ -195,42 +198,23 @@
                   </p>
                   <ul class="footer__list">
                       <li class="footer__list-item">
-                          <a href="#" class="footer__list-link">
-                              <i class="ri-facebook-circle-line"></i>
+                          <a href="https://www.linkedin.com/in/farid-alfaro-b463381b9/" class="footer__list-link" target="_blank">
+                              <i class="ri-linkedin-fill"></i>
                           </a>
                       </li>
                       <li class="footer__list-item">
-                          <a href="#" class="footer__list-link">
-                              <i class="ri-instagram-line"></i>
+                          <a href="https://github.com/FaridAlfaro" class="footer__list-link" target="_blank">
+                            <i class="ri-github-line"></i>
                           </a>
                       </li>
                       <li class="footer__list-item">
-                          <a href="#" class="footer__list-link">
-                              <i class="ri-twitter-line"></i>
+                          <a href="https://www.instagram.com/farid_alfaro_/" class="footer__list-link" target="_blank">
+                            <i class="ri-instagram-line"></i>
                           </a>
                       </li>
                   </ul>
                   <span class="copyright">&copy;2023 Veertien. Todos los derechos reservados.</span>
               </div>
-
-              <div>
-                  <h6 class="footer__title">Servicios</h6>
-                  <ul class="footer__list">
-                      <li class="footer__list-item">
-                          <a href="" class="footer__list-link">Cotizar ahora</a>
-                      </li>
-                      <li class="footer__list-item">
-                          <a href="" class="footer__list-link">Contactar un especialista</a>
-                      </li>
-                      <li class="footer__list-item">
-                          <a href="" class="footer__list-link">Consultoria</a>
-                      </li>
-                      <li class="footer__list-item">
-                          <a href="" class="footer__list-link">Trabaja en Veertien</a>
-                      </li>
-                  </ul>
-              </div>
-
               <div>
                   <h6 class="footer__title">Nosotros</h6>
                   <ul class="footer__list">
