--- a/ayuda.html
+++ b/ayuda.html
@@ -14,6 +14,9 @@
         <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     </head>
     <body style="display: flex; flex-direction: column; justify-content: space-between; height: 100vh;">
+        <div id="preloader">
+            <img src="/img/svg/faviconRecurso 42.svg" alt="" id="loader" >
+          </div>
         <header class="caja" >
                 <nav class="container nav_container" id="navPrincipal">
                     <div class="icono-menu">
