--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 </head>
 <body style="display: flex; flex-direction: column; justify-content: space-between; height: 100vh;">
-    <div id="preloader">
-      <div id="loader"></div>
-    </div>
+  <div id="preloader">
+    <img src="/img/svg/faviconRecurso 42.svg" alt="" id="loader" >
+  </div>
     <header class="caja" >
             <nav class="container nav_container" id="navPrincipal">
                 <div class="icono-menu">
@@ -105,7 +105,7 @@
         <div class="skills">
           <div class="titleB">
             <h2 >Nuestras skills</h2>
-            <p class="subtitle">Trabajamos con las mejores texnologias disponibles</p>
+            <p class="subtitle">Trabajamos con las mejores tecnologías disponibles</p>
           </div>
           <div id="carrouselSkills" class="carousel slide">
             <div class="carousel-indicators">
