--- a/index.html
+++ b/index.html
@@ -6,47 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="/css/main.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/remixicon/remixicon.css"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-      crossorigin="anonymous"
-    ></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/remixicon/remixicon.css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous"/>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <title>Veertien | Desarrollo web y ciencia de datos</title>
-    <link
-      rel="icon"
-      href="/img/svg/faviconRecurso 42.svg"
-      type="image/svg+xml"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
-      rel="stylesheet"
-    />
+    <link  rel="icon" href="/img/svg/faviconRecurso 42.svg" type="image/svg+xml"/>
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet"/>
   </head>
-  <body
-    style="
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      height: 100vh;
-    "
-  >
+  <body style="display: flex; flex-direction: column; justify-content: space-between; height: 100vh;">
     <div id="preloader">
       <img src="/img/svg/faviconRecurso 42.svg" alt="" id="loader" />
     </div>
     <header>
-      <!-- NAV -->
       <nav id="nav">
-          <div class="logo">
+          <div class="logo" id="logo1">
               <img src="/logoRecurso 27.svg" alt="Logo JCode">
           </div>
           <ul id="options">
@@ -76,7 +49,7 @@
       </nav>
   </header>
     <main>
-      <section>
+      <section class="conteiner_carrousel">
         <div id="carouselExampleCaptions" class="carousel slide">
           <div class="carousel-indicators">
             <button
@@ -110,7 +83,7 @@
             <div class="carousel-item active">
               <img
                 src="/img/navBar/2.png"
-                class="img_carousel d-block .mt-100 h-100 w-100"
+                class="img_carousel d-block h-100 w-100"
                 alt="..."
               />
               <div class="carousel-caption d-md-block">
@@ -131,7 +104,7 @@
             <div class="carousel-item">
               <img
                 src="/img/navBar/3.png"
-                class="img_carousel d-block .mt-100 h-100 w-100"
+                class="img_carousel d-block h-100 w-100"
                 alt="..."
               />
               <div class="carousel-caption d-md-block">
@@ -151,7 +124,7 @@
             <div class="carousel-item">
               <img
                 src="/img/navBar/4.png"
-                class="img_carousel d-block .mt-100 h-100 w-100"
+                class="img_carousel d-block h-100 w-100"
                 alt="..."
               />
               <div class="carousel-caption d-md-block">
@@ -171,7 +144,7 @@
             <div class="carousel-item">
               <img
                 src="/img/navBar/5.png"
-                class="img_carousel d-block .pt-100 h-100 w-100"
+                class="img_carousel d-block h-100 w-100"
                 alt="..."
               />
               <div class="carousel-caption d-md-block">
