--- a/index.html
+++ b/index.html
@@ -406,6 +406,6 @@
       AOS.init();
     </script>
     <script src="js/menu.js"></script>
-    <script src="js/scroll.js"></script>
+    <script defer src="js/scroll.js"></script>
   </body>
 </html>
