Pruba dos, con libreria

--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
     <title>Veertien | Desarrollo web y ciencia de datos</title>
     <link  rel="icon" href="/img/svg/faviconRecurso 42.svg" type="image/svg+xml"/>
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet"/>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
   </head>
   <body style="display: flex; flex-direction: column; justify-content: space-between; height: 100vh;">
-    <div id="preloader">
+    <!-- <div id="preloader">
       <img src="/img/svg/faviconRecurso 42.svg" alt="" id="loader" />
-    </div>
+    </div> -->
     <header>
       <nav id="nav">
           <div class="logo" id="logo1">
@@ -400,7 +402,7 @@
         </div>
       </div>
     </footer>
-    <script src="main.js"></script>
+    <!-- <script src="main.js"></script> -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
