Cuarto intento, correción conpilación en mobile

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <img src="/img/svg/faviconRecurso 42.svg" alt="" id="loader" />
     </div> -->
     <header>
-      <nav id="nav">
+      <nav id="nav" class="scrollmagic">
           <div class="logo" id="logo1">
               <img src="/logoRecurso 27.svg" alt="Logo JCode">
           </div>
