--- a/index.html
+++ b/index.html
@@ -14,15 +14,17 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet"/>
     <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
   </head>
   <body style="display: flex; flex-direction: column; justify-content: space-between; height: 100vh;">
     <div id="preloader">
       <img src="/img/svg/faviconRecurso 42.svg" alt="" id="loader" />
     </div>
     <header>
+      
       <nav id="nav" class="scrollmagic">
           <div class="logo" id="logo1">
-              <img src="/logoRecurso 27.svg" alt="Logo JCode">
+              <img src="/logoBlanco.png" alt="" class="logo_nav">
           </div>
       </nav>
       <div class="content_btf">
@@ -79,7 +81,7 @@
             <div class="carousel-item active">
               <img
                 src="/img/navBar/2.png"
-                class="img_carousel d-block h-100 w-100"
+                class="img_carousel d-block"
                 alt="..."
               />
               <div class="carousel-caption d-md-block">
@@ -100,7 +102,7 @@
             <div class="carousel-item">
               <img
                 src="/img/navBar/3.png"
-                class="img_carousel d-block h-100 w-100"
+                class="img_carousel d-block"
                 alt="..."
               />
               <div class="carousel-caption d-md-block">
@@ -120,7 +122,7 @@
             <div class="carousel-item">
               <img
                 src="/img/navBar/4.png"
-                class="img_carousel d-block h-100 w-100"
+                class="img_carousel d-block"
                 alt="..."
               />
               <div class="carousel-caption d-md-block">
@@ -138,9 +140,9 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img
+                <img
                 src="/img/navBar/5.png"
-                class="img_carousel d-block h-100 w-100"
+                class="img_carousel d-block"
                 alt="..."
               />
               <div class="carousel-caption d-md-block">
@@ -193,7 +195,7 @@
             </p>
           </div>
           <div id="carrouselSkills" class="carousel slide">
-            <div class="carousel-indicators">
+            <div class="carousel-indicators d-none">
               <button
                 type="button"
                 data-bs-target="#carrouselSkills"
@@ -225,28 +227,28 @@
               <div class="carousel-item active">
                 <img
                   src="/img/1.svg"
-                  class="img_carousel d-block w-100"
+                  class="d-block w-100"
                   alt="..."
                 />
               </div>
               <div class="carousel-item">
                 <img
                   src="/img/2.svg"
-                  class="img_carousel d-block w-100"
+                  class="d-block w-100"
                   alt="..."
                 />
               </div>
               <div class="carousel-item">
                 <img
                   src="/img/3.svg"
-                  class="img_carousel d-block w-100"
+                  class="d-block w-100"
                   alt="..."
                 />
               </div>
               <div class="carousel-item">
                 <img
                   src="/img/4.svg"
-                  class="img_carousel d-block w-100"
+                  class="d-block w-100"
                   alt="..."
                 />
               </div>
@@ -396,12 +398,14 @@
         </div>
       </div>
     </footer>
-    <script src="main.js"></script>
+    <script src="/js/main.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
     </script>
     <script src="js/menu.js"></script>
     <script defer src="js/scroll.js"></script>
+    <script src="/js/gradient.js"></script>
+    
   </body>
 </html>
