--- a/index.html
+++ b/index.html
@@ -179,14 +179,15 @@
         </div>
       </section>
       <section>
-        <h2 class="title">Sabemos lo dificil que puede ser confiar</h2>
-        <p class="copy">
+        <h2 class="title" data-aos="fade-up" data-aos-duration="1000">Sabemos lo dificil que puede ser confiar</h2>
+        <p class="copy" data-aos="fade-up" data-aos-duration="1000">
           En Veertien, nos enfocamos en satisfacer las necesidades de nuestros
           clientes a través de una comunicación y colaboración estrecha durante
           todo el proceso de desarrollo. Escuchamos y respondemos a las
           necesidades y preocupaciones de nuestros clientes de manera oportuna y
           efectiva para cumplir con todas las expectativas en cada proyecto.
         </p>
+        <div class="section2" data-aos="fade-up" data-aos-duration="2000">
         <div class="skills">
           <div class="titleB">
             <h2>Nuestras skills</h2>
@@ -279,6 +280,8 @@
             </button>
           </div>
         </div>
+
+        </div>
       </section>
       <section>
         <h3 class="title">Con nosotros, son solo tres simples pasos</h3>
@@ -334,6 +337,13 @@
               </span>
             </form>
           </div>
+        </div>
+      </section>
+      <section style="display: flex; flex-wrap: wrap;">
+        <h1 class="title">Mobile first</h1>
+        <p class="copy">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui placeat quam soluta neque architecto sit omnis non vero sapiente pariatur.</p>
+        <div class="section2" style="display: inline-block;">
+          <img src="/img/copy/Ch3Recurso 12@2x.png" alt="" class="mockup" data-aos="zoom-in" data-aos-duration="2000">
         </div>
       </section>
     </main>
