--- a/index.html
+++ b/index.html
@@ -20,11 +20,10 @@
     <div id="preloader">
       <img src="/img/svg/faviconRecurso 42.svg" alt="" id="loader" />
     </div>
-    <header>
-      
+    <header> 
       <nav id="nav" class="scrollmagic">
           <div class="logo" id="logo1">
-              <img src="/logoBlanco.png" alt="" class="logo_nav">
+              <img src="/img/logo/logoblanco.svg" alt="" class="logo_nav">
           </div>
       </nav>
       <div class="content_btf">
@@ -32,7 +31,7 @@
             <div class="daily">DailyUI Challenge</div>
             <div class="number_btf">010</div>
           </div>
-          <button class="shareButton main_btf">
+          <button class="shareButton main_btf" id="shareButtonJS">
             <svg class="share" style="width:24px;height:24px" viewBox="0 0 24 24"><path d="M3 4h18v2H3V4zm0 7h18v2H3v-2zm0 7h18v2H3v-2z"/></svg>
         <svg class="check" style="width:24px;height:24px" viewBox="0 0 24 24">    <path  d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z" /></svg>
         <svg class="close" style="width:24px;height:24px" viewBox="0 0 24 24">
@@ -47,7 +46,7 @@
       </div>
   </header>
     <main>
-      <section class="conteiner_carrousel">
+      <section>
         <div id="carouselExampleCaptions" class="carousel slide">
           <div class="carousel-indicators">
             <button
@@ -178,7 +177,7 @@
           </button>
         </div>
       </section>
-      <section>
+      <section class="section_2">
         <h2 class="title" data-aos="fade-up" data-aos-duration="1000">Sabemos lo dificil que puede ser confiar</h2>
         <p class="copy" data-aos="fade-up" data-aos-duration="1000">
           En Veertien, nos enfocamos en satisfacer las necesidades de nuestros
@@ -187,14 +186,11 @@
           necesidades y preocupaciones de nuestros clientes de manera oportuna y
           efectiva para cumplir con todas las expectativas en cada proyecto.
         </p>
-        <div class="section2" data-aos="fade-up" data-aos-duration="2000">
-        <div class="skills">
-          <div class="titleB">
-            <h2>Nuestras skills</h2>
-            <p class="subtitle">
+        <h2 class="title">Nuestras skills</h2>
+            <p class="copy">
               Trabajamos con las mejores tecnologías disponibles
             </p>
-          </div>
+        <div class="skills" data-aos="zoom-in" data-aos-duration="2000">
           <div id="carrouselSkills" class="carousel slide">
             <div class="carousel-indicators d-none">
               <button
@@ -227,28 +223,28 @@
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img
-                  src="/img/1.svg"
+                  src="/img/skills/1.svg"
                   class="d-block w-100"
                   alt="..."
                 />
               </div>
               <div class="carousel-item">
                 <img
-                  src="/img/2.svg"
+                  src="/img/skills/2.svg"
                   class="d-block w-100"
                   alt="..."
                 />
               </div>
               <div class="carousel-item">
                 <img
-                  src="/img/3.svg"
+                  src="/img/skills/3.svg"
                   class="d-block w-100"
                   alt="..."
                 />
               </div>
               <div class="carousel-item">
                 <img
-                  src="/img/4.svg"
+                  src="/img/skills/4.svg"
                   class="d-block w-100"
                   alt="..."
                 />
@@ -344,6 +340,9 @@
         <p class="copy">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui placeat quam soluta neque architecto sit omnis non vero sapiente pariatur.</p>
         <div class="section2" style="display: inline-block;">
           <img src="/img/copy/Ch3Recurso 12@2x.png" alt="" class="mockup" data-aos="zoom-in" data-aos-duration="2000">
+        </div>
+        <div class="caja_video">
+          <video src="/img/"></video>
         </div>
       </section>
     </main>
