--- a/index.html
+++ b/index.html
@@ -78,15 +78,10 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img
-                src="/img/navBar/2.png"
-                class="img_carousel d-block"
-                alt="..."
-              />
+              <video src="/img/videos/pexels-cottonbro-9669110.mp4" class="img_carousel d-block" autoplay loop></video>
               <div class="carousel-caption d-md-block">
                 <div class="caja__textos">
                   <h5 class="title_section1">
-                    Especialistas en
                     <div class="title__active" id="text_rotate"></div>
                   </h5>
                   <p class="text">
@@ -99,11 +94,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img
-                src="/img/navBar/3.png"
-                class="img_carousel d-block"
-                alt="..."
-              />
+              <video src="/img/videos/pexels-mart-production-7565887.mp4" class="img_carousel d-block" autoplay loop></video>
               <div class="carousel-caption d-md-block">
                 <div class="caja__textos">
                   <h5 class="title_section1">
@@ -119,11 +110,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img
-                src="/img/navBar/4.png"
-                class="img_carousel d-block"
-                alt="..."
-              />
+              <video src="/img/videos/production ID_4645399.mp4" class="img_carousel d-block" autoplay loop></video>
               <div class="carousel-caption d-md-block">
                 <div class="caja__textos">
                   <h5 class="title_section1">
@@ -139,22 +126,16 @@
               </div>
             </div>
             <div class="carousel-item">
-                <img
-                src="/img/navBar/5.png"
-                class="img_carousel d-block"
-                alt="..."
-              />
+              <video src="/img/videos/brazo.mp4" class="img_carousel d-block" autoplay loop></video>
               <div class="carousel-caption d-md-block">
                 <div class="caja__textos">
                   <h5 class="title_section1">
-                    <span class="text__active">Hosting selector</span>
+                    <span class="text__active">Robots for people</span>
                   </h5>
                   <p class="text">
-                    Contamos con muchas alternativas para almacenar tus
-                    proyectos, siempre pensando en la eficiencia y en el cuidado
-                    de tu rentabilidad
+                    Trabajos activamente para poner el futuro al alcance de todos
                   </p>
-                  <a href="/nosotros.html" class="cta">Nuestros servicios</a>
+                  <a href="/nosotros.html" class="cta">Conoce 4teen</a>
                 </div>
               </div>
             </div>
@@ -177,15 +158,21 @@
           </button>
         </div>
       </section>
-      <section class="section_2">
-        <h2 class="title" data-aos="fade-up" data-aos-duration="1000">Sabemos lo dificil que puede ser confiar</h2>
-        <p class="copy" data-aos="fade-up" data-aos-duration="1000">
+      <section>
+        <div class="section0" data-aos="zoom-in" data-aos-duration="2000">
+          <h2 class="title title_invert">Animate al cambio</h2>
+          <p class="copy copy_invert">
           En Veertien, nos enfocamos en satisfacer las necesidades de nuestros
-          clientes a través de una comunicación y colaboración estrecha durante
-          todo el proceso de desarrollo. Escuchamos y respondemos a las
-          necesidades y preocupaciones de nuestros clientes de manera oportuna y
+          clientes a través de una comunicación efeiciente,respondemos tus
+          necesidades y preocupaciones de manera oportuna y
           efectiva para cumplir con todas las expectativas en cada proyecto.
-        </p>
+          </p>
+          <div class="title_button_container div_efecto">
+            <a href="#" class="title_button">Conoce nuestra filosofía</a>
+          </div>
+        </div>
+      </section>
+      <section class="section_2">
         <h2 class="title">Nuestras skills</h2>
             <p class="copy">
               Trabajamos con las mejores tecnologías disponibles
