--- a/pruebas.html
+++ b/pruebas.html
@@ -1,84 +1,54 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="shortcut icon" href="img/favicon.png" type="image/x-png">
-
-    <title>Hide Show Menu With Efect Scroll</title>
-
-    <link rel="stylesheet" href="css/fontawesome.min.css">
-    <link rel="stylesheet" href="/pruebas.css">
+    <link rel="stylesheet" href="pruebas.css">
+    <title>Document</title>
 </head>
 <body>
-    <!-- HEADER -->
-    <header>
-        <!-- NAV -->
-        <nav id="nav">
-            <div class="logo">
-                <img src="img/logo.svg" alt="Logo">
-            </div>
-            <ul id="options">
-                <div class="opciones">
-                    <li>
-                        <a href="http://jcode.ga/" class="text-uppercase">Home</a>
-                    </li>
-                    <li>
-                        <a href="http://jcode.ga/" class="text-uppercase">About Me</a>
-                    </li>
-                    <li>
-                        <a href="http://jcode.ga/" class="text-uppercase">Skills</a>
-                    </li>
-                    <li>
-                        <a href="http://jcode.ga/" class="text-uppercase">Contact</a>
-                    </li>
-                    <li>
-                        <a href="http://jcode.ga/" class="text-uppercase">Blog</a>
-                    </li>
-                </div>
-            </ul>
-            <div class="menu" id="menu">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-        </nav>
-        <!-- NAV -->
+    <div class="progress-bar-container">
+        <div class="progress-bar"></div>
+        <div class="progress-bar-text">
+          <span>Inicio</span>
+          <span>Sección 1</span>
+          <span>Sección 2</span>
+          <span>Sección 3</span>
+          <span>Fin</span>
+        </div>
+      </div>
+      <section class="" id="section-1">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis veritatis molestiae aliquam quis nemo similique accusantium illum impedit, quia eum atque! Ea perspiciatis, vero ducimus voluptate nulla dolorum repudiandae nostrum aut corporis nesciunt numquam aperiam, amet voluptatibus dolor ab cum quaerat! Accusamus nobis libero hic nemo iusto neque sed iste minima, eum reprehenderit veniam omnis quia illum laboriosam incidunt sit illo tempora cumque impedit ea porro eligendi quo totam. Nostrum, delectus. Ducimus modi facere minus est corrupti culpa inventore accusantium qui repellendus repellat natus aliquid placeat explicabo quaerat cum ad, molestiae, rem praesentium eaque eveniet dignissimos, aperiam tempora porro voluptatem? Accusantium adipisci ea maxime quod harum illum eligendi sit nemo ut quam ab eum perspiciatis inventore nulla nobis modi eius ullam quia commodi cumque, obcaecati impedit! Praesentium, doloremque. Libero maxime nemo cum. Soluta officia id corporis dolor accusantium distinctio porro, natus vitae veniam voluptas suscipit reprehenderit eum nostrum incidunt quidem sequi architecto sed dicta aliquid numquam? Incidunt excepturi corporis, dolorum ullam nulla repellat odio consectetur quam corrupti neque voluptatem aliquam placeat totam velit provident deserunt reprehenderit in, eligendi numquam saepe? Repellendus ratione corporis beatae placeat. Quibusdam unde officia corporis culpa facilis! Consectetur error explicabo excepturi a ipsa reiciendis officiis voluptatem. Officia tenetur ipsum earum aliquam magnam itaque! Error at atque sapiente doloremque, nobis ducimus, architecto ut odio, sint soluta maxime non? A, rerum delectus. Voluptatem eum facere consequuntur, nemo, esse nulla eveniet iure quasi dolorum accusantium qui aperiam assumenda. Beatae, excepturi consequatur. Tempora rerum dolor adipisci quod veritatis tempore, ut ipsam porro deserunt, aperiam sunt nostrum cumque. Recusandae inventore perspiciatis obcaecati autem consequuntur! Dolor pariatur voluptatibus fugit odio suscipit? Possimus laboriosam quaerat fuga. Unde tenetur voluptatibus itaque? Dolor, mollitia corrupti? Distinctio quisquam nemo, dolores quod vel omnis excepturi, beatae non, veniam veritatis nobis? Incidunt natus, veniam cupiditate neque cumque modi earum omnis alias. Quasi quas nesciunt quaerat quam alias provident atque fuga accusantium numquam quia. Quasi iste tempora reiciendis debitis doloribus veritatis odit modi tenetur mollitia. Dolores, laborum eveniet. Similique est blanditiis rem, ipsam nihil consequuntur aliquam id, aperiam tenetur distinctio recusandae alias eaque laboriosam, fuga nam dolorum amet quis assumenda illum! Quasi esse asperiores aperiam expedita, voluptatem, veritatis iusto fuga quisquam repellendus deleniti, nisi ipsam fugiat unde dolor perferendis laudantium iure vitae tempore libero praesentium. Nostrum distinctio fuga, accusamus itaque suscipit, magnam ducimus nesciunt qui inventore id modi cupiditate sed dolore quibusdam, amet a voluptas quas! Quo, veritatis vel? Ut esse autem iusto dolorem ducimus totam pariatur adipisci aspernatur voluptatem quia cum labore et similique minus, tenetur maxime minima voluptates ea dignissimos! Quam cum dolores minima, accusamus enim laborum consectetur et vel, illum quasi eligendi suscipit? Aspernatur atque autem, iusto dolorem voluptates unde quam, laudantium cum optio facilis qui nihil ducimus, deleniti provident laborum enim aperiam. Nam odit nobis quidem saepe eos assumenda corrupti alias dolor nostrum perferendis deleniti praesentium quas, unde neque quos omnis asperiores voluptas enim sequi repellendus culpa soluta dolore quis. Animi at in sapiente velit placeat obcaecati exercitationem, ullam aut unde, laudantium voluptas voluptates odit?
 
-        <!-- MAIN -->
-        <main>
-            <div class="main-fondo">
+      </section>
+      <section class="" id="section-2">
+            <img src="/img/Ch3Recurso 20.svg" alt="">
+      </section>
+      <section class="" id="section3">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero harum, quae modi assumenda quia officia magnam rerum iste sint quisquam autem a, dignissimos voluptatibus ad maiores fugit nihil quos quibusdam optio aliquid labore! Blanditiis quam, quas quis explicabo veniam nulla excepturi amet illum ullam assumenda magnam similique doloribus nesciunt. Recusandae, delectus sunt tempora eligendi cum illo. Eum possimus laboriosam incidunt quaerat laudantium blanditiis illo ullam velit nihil quia expedita quasi commodi nostrum vero accusantium nisi consectetur a repellat consequatur, nulla magni consequuntur tempora magnam! Non praesentium dolorem quos, laudantium veritatis odio, consequatur natus nam sapiente autem odit minus facere magnam omnis impedit eius, ipsa provident dicta! Quasi amet, doloremque culpa modi fugiat enim pariatur cumque odit beatae nihil. Totam aliquam laborum corporis accusantium quaerat nobis temporibus laudantium praesentium, illo rem aperiam. Natus, mollitia? Ad, similique quas. Reiciendis quidem repellendus quisquam earum. Aspernatur maiores molestiae esse, unde tempore enim, commodi hic possimus velit atque corrupti. Eligendi repellendus, atque provident expedita possimus tempore illo ut quaerat! Sint nemo consectetur quam veritatis asperiores, dolore sunt expedita? Deserunt, doloribus voluptas, nulla consequuntur autem et nam iste nobis harum sint molestias saepe, cum facilis non. Eveniet ut sint, nisi dolor architecto, nam fugiat optio eius ea obcaecati ad accusantium libero quas alias veritatis ipsam voluptatibus voluptas quae commodi nihil, quisquam vitae? Quae magnam ad ex? Aliquid amet ea explicabo atque assumenda ab quos recusandae nihil quidem. Fuga cupiditate quas excepturi modi asperiores, odio ut a quos iste atque harum eos quo alias dolores cum adipisci! Modi sequi animi, exercitationem facere odio nemo, est nesciunt quod obcaecati corrupti ex dolorum maxime dolore fuga doloremque? Minus molestias nemo natus repellat, labore nam laudantium, delectus vero cum libero voluptatibus aperiam veritatis. Aut facilis quidem impedit! Alias molestiae commodi, vitae quae reprehenderit quod excepturi amet error hic corrupti provident?
+      </section>
+      
+      <script>
+        const progressBar = document.querySelector('.progress-bar');
+const progressBarText = document.querySelectorAll('.progress-bar-text span');
 
-            </div>
+window.addEventListener('scroll', () => {
+  const { scrollTop, scrollHeight, clientHeight } = document.documentElement;
+  const progressPercent = (scrollTop / (scrollHeight - clientHeight)) * 100;
+  progressBar.style.width = `${progressPercent}%`;
+  
+  progressBarText.forEach((text, index) => {
+    const sectionHeight = document.querySelector(`#section-${index + 1}`).offsetHeight;
+    const sectionTop = document.querySelector(`#section-${index + 1}`).offsetTop;
+    if (scrollTop >= sectionTop && scrollTop < (sectionTop + sectionHeight)) {
+      text.classList.add('active');
+    } else {
+      text.classList.remove('active');
+    }
+  });
+});
 
-            <div class="container">
-                <div class="main-texto">
-                    <h1>Hola, soy un diseñador web</h1><span> y estaré encantado de trabajar junto a ti.</span>
-                </div>
-
-                <div class="main-redes-sociales">
-                    <div class="rs-tipo youtube">
-                        <i class="fab fa-youtube"></i>
-                    </div>
-
-                    <div class="rs-tipo twitter">
-                        <i class="fab fa-twitter"></i>
-                    </div>
-
-                    <div class="rs-tipo github">
-                        <i class="fab fa-github"></i>
-                    </div>
-
-                    <div class="rs-tipo instagram">
-                        <i class="fab fa-instagram"></i>
-                    </div>
-                </div>
-            </div>
-        </main>
-        <!-- MAIN -->
-    </header>
-    <script src="js/menu.js"></script>
-    <script src="js/scroll.js"></script>
+      </script>
 </body>
 </html>
