--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header> 
       <nav id="nav" class="scrollmagic">
           <div class="logo" id="logo1">
-              <img src="/img/logo/logoblanco.svg" alt="" class="logo_nav">
+            <a href="index.html"><img src="/img/logo/logoblanco.svg" alt="" class="logo_nav"></a>
           </div>
       </nav>
       <div class="content_btf">
