--- a/index.html
+++ b/index.html
@@ -26,9 +26,17 @@
             <div class="logo" id="logo1">
               <a href="index.html"><img src="/img/logo/logoblanco.svg" alt="" class="logo_nav"></a>
             </div>
-          <div class="menu-toggle" data-js="menu-toggle">
-            <span class="menu-toggle-grippy">Toggle</span>
-          </div>
+            <div class="menu-toggle" data-js="menu-toggle">
+              <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+              </div>
+              <div class="cross">
+                <span></span>
+                <span></span>
+              </div>
+            </div>
         </nav>
         </header> 
         <div class="hidden-panel">
